# harness-v2

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  dev.sh  plan.md
.agents/skills/dk-agent-native-audit/: SKILL.md
.agents/skills/dk-breadcrumb-creator/: SKILL.md
.agents/skills/dk-changelog/: SKILL.md
.agents/skills/dk-close-the-loop/: SKILL.md
.agents/skills/dk-compound/: SKILL.md
.agents/skills/dk-local-follow-breadcrumb/: SKILL.md
.agents/skills/dk-local-inspect/: SKILL.md
.agents/skills/dk-local-logs/: SKILL.md
.agents/skills/dk-local-mock-first-approach/: SKILL.md
.agents/skills/dk-local-run-spec/: SKILL.md
.agents/skills/dk-loop-audit/: SKILL.md
.agents/skills/dk-merge-resolve/: SKILL.md
.codex/: config.toml  hooks.json  migrate-to-codex-report.txt
.codex/agents/: dk-test-writer.toml  senior-fullstack-engineer.toml
.codex/hooks/: edit_policy.py
.github/: copilot-instructions.md
docs/: _INDEX.md
docs/harness-adoption/: README.md
odin/specs/: sp_20260627_194159_taskit_as.json  sp_20260627_194511_194159_taskit_as.json  sp_20260627_194601_194159_taskit_as.json  sp_20260627_194704_taskit_as.json  sp_20260627_194718_taskit_as.json  sp_20260627_195045_194159_taskit_as.json
plans/: plan_sp_20260627_105751_doc_review_spec.json
specs/: sp_20260627_105657_doc_review_spec.json  sp_20260627_105719_doc_review_spec.json  sp_20260627_105751_doc_review_spec.json
state/: email-backoff.json
taskit/taskit-backend/: .gitignore  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
(+30 files in other folders)
